--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -484,14 +484,14 @@
       "BASIC_DATA": "Informazioni sull'azienda di trasporto",
       "OFFICIAL_DATA": "Dati ufficiali",
       "TRANSPORT_COMPANIES": "Azienda di trasporto",
-      "NUMBER": "Numero",
+      "NUMBER": "Numero IT",
       "ABBREVIATION": "Iniziali",
       "BUSINESS_REGISTER_NAME": "Nome del registro commerciale",
       "BUSINESS_REGISTER_NUMBER": "Nummero del registro commerciale",
       "DESCRIPTION": "Designazione ufficiale",
       "RICS_CODE": "RICS-Code",
       "GO_NUMBERS": "OA-Numero",
-      "ENTERPRISE_ID": "UID",
+      "ENTERPRISE_ID": "IDI",
       "STATUS": "Stato",
       "TRANSPORT_COMPANY_STATUS": {
         "OPERATOR": "Operatore",
@@ -969,7 +969,7 @@
       "NEW": "Acquisizione del nuovo bordo di tenuta",
       "DESIGNATION": "Designazione clienti",
       "DESIGNATION_OPERATIONAL": "Denominazione aziendale",
-      "HEADER": "Bordo di arresto / binario",
+      "HEADER": "Bordo di arresto",
       "SERVICE_POINT_NAME": "Nome della fermata",
       "DETAILS": "Dettagli del",
       "PARENT_SLOID": "Appartiene all'area",
@@ -1190,7 +1190,7 @@
       "EXTERNAL_LINK_LABEL": "Guida LDis"
     },
     "PLATFORMS": {
-      "TITLE": "Bordo di fermata/Binario",
+      "TITLE": "Bordo di fermata",
       "NEW": "Nuovo bordo di fermata",
       "NO_RECORD": "Questo bordo di fermata non è ancora stato registrato.",
       "RECORDING_STATUS": "Stato della registrazione",
