ATLAS-1857: One more translation change.

--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -851,7 +851,7 @@
       "DIDOK_CODE_SEARCH": "Code DiDok",
       "SERVICE_POINT": "Service",
       "SERVICE_POINT_ID": "ID service",
-      "NEW_SERVICE_POINT": "Nouveau service",
+      "NEW_SERVICE_POINT": "Nouveau point de services",
       "AREAS": "Zones d'arrêt",
       "FOT_COMMENT": "Commentaire OFT",
       "DETAILS": "Informations sur le service",
