--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -1104,7 +1104,7 @@
         "AUDIO_TICKET_MACHINE_INFO": "Selon l’art. 8 OETHand",
         "INFO_TICKET_MACHINE": "Remarques sur les distributeurs de billets"
       },
-      "NO_STOP_POINT_FOUND": "Pour cet arrêt, aucune donnée LHand n'a encore été saisie par l'entreprise de transport.",
+      "NO_STOP_POINT_FOUND": "Aucune donnée d'accessibilité n'a encore été saisie pour cet arrêt.",
       "NOTIFICATION": {
         "ADD_SUCCESS": "L'arrêt a été ajouté avec succès.",
         "EDIT_SUCCESS": "L'arrêt a été enregistré avec succès."
