--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -1104,7 +1104,7 @@
         "AUDIO_TICKET_MACHINE_INFO": "Secondo l’art. 8 ORTDis",
         "INFO_TICKET_MACHINE": "Osservazioni sui distributori automatici di biglietti"
       },
-      "NO_STOP_POINT_FOUND": "L'azienda di trasporto non ha ancora registrato alcun dato LDis per questa fermata.",
+      "NO_STOP_POINT_FOUND": "Per questa fermata non sono ancora stati registrati dati sull'accessibilità.",
       "NOTIFICATION": {
         "ADD_SUCCESS": "La fermata è stata aggiunta con successo.",
         "EDIT_SUCCESS": "La fermata è stata salvata con successo."
