--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -161,6 +161,7 @@
     "HOME_BUSINESS_PLATFORM": "La plateforme SKI Business",
     "TTFN": {
       "TITLE": "Gérer les numéros de tableaux-horaires",
+      "TITLE_HEADER": "Numéros de tableaux-horaires",
       "TITLE_MENU": "Numéros de tableaux-horaires",
       "DESCRIPTION": "Saisier, modifier et consulter les numéros de tableaux-horaires.",
       "PATH_TEXT": "Vers tableaux-horaires"
